--- a/TabNavigation/package.json
+++ b/TabNavigation/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "^16.3.0-alpha.0",
     "react-native": "0.55.0",
-    "react-navigation": "^2.2.2"
+    "react-navigation": "2.2.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
