--- a/ThirtyDaysOfReactNative/package.json
+++ b/ThirtyDaysOfReactNative/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "react": "^16.3.0-alpha.0",
-    "react-native": "0.55.0"
+    "react-native": "0.55.0",
+    "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "2.2.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
