--- a/ThirtyDaysOfReactNative/package.json
+++ b/ThirtyDaysOfReactNative/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^16.3.0-alpha.0",
+    "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
@@ -17,7 +17,7 @@
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.1.0",
-    "react-test-renderer": "^16.3.0-alpha.0"
+    "react-test-renderer": "16.3.1"
   },
   "jest": {
     "preset": "react-native"
